Now loading Angular successfully.

--- a/web-tutorial/tsconfig.json
+++ b/web-tutorial/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "lib": [ "es6", "dom" ],
-    "types": [
-      "./node_modules/@types/node/index.d.ts"
-    ],
+    "types": [],
     "rootDir": "./",
     "target": "es5"
   }
