--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # User-specific files
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
+**/*.suo
+**/*.user
+**/*.userosscache
+**/*.sln.docstates
 
 # Build results
 **/[Dd]ebug/
