--- a/web-tutorial/package.json
+++ b/web-tutorial/package.json
@@ -28,7 +28,9 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
     "typescript": "^2.2.1",
-    "awesome-typescript-loader": "^3.1.2"
+    "angular-router-loader": "^0.5.0",
+    "awesome-typescript-loader": "^3.1.2",
+    "reflect-metadata": "^0.1.10"
   },
   "scripts": {
     "start": "webpack-dev-server --port 3000"
