--- a/web-tutorial/package.json
+++ b/web-tutorial/package.json
@@ -32,7 +32,8 @@
     "reflect-metadata": "^0.1.10",
     "typescript": "^2.2.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "raw-loader": "^0.5.1"
   },
   "scripts": {
     "start": "webpack-dev-server --port 3000"
